# c-reg

./: .gitignore  README.md
cli/: CMakeLists.txt  Makefile  ascii.h  ascii.txt  commands.c  commands.h  commands_helper.c  commands_helper.h  creg  handle.c  handle.h  help.c  help.h  main.c  sections.c  sections.h  user.c  user.h
cli/c-quickstart/: CMakeLists.txt  quickstart.c
cli/c-quickstart/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  insertCourse.out  quickstart.out
cli/cmake-build/: commands.c  creg  main.c
cli/cmake-build/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  creg
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.module.css  page.tsx
web/app/ap-credit/: page.module.css  page.tsx
web/app/api/ap-credit/: route.ts
web/app/api/auth/: route.ts
web/app/api/chat/: route.tsx
web/app/api/courses/: route.ts
web/app/api/credits/: route.ts
web/app/api/enrollments/: route.ts
web/app/chatbot/: page.tsx
web/app/first-years/: page.module.css  page.tsx
web/app/login/: page.module.css  page.tsx
web/app/no-courses/: page.module.css  page.tsx
web/app/pathways/: page.module.css  page.tsx
web/app/placement-tests/: page.module.css  page.tsx
web/app/register/: page.module.css  page.tsx
web/app/register-landing-page/: page.module.css  page.tsx
web/c-reg/: package-lock.json  package.json
web/components/: ChatBot.tsx  Header.tsx
web/context/: ChatContext.tsx  auth-context.tsx
web/util/: get-courses-by-ap.ts  get-courses-by-placement.ts  get-user-credit.ts
(+17 files in other folders)
